# wyoming-transcribe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  compose.yml  docker-entrypoint.sh  hacs.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
cohere_wyoming/: __main__.py  audio.py  enrollment.py  handler.py  history.py  pending.py  settings.py  speaker_id.py  transcriber.py  vad.py
cohere_wyoming/templates/: index.html
custom_components/cohere_transcribe_diarize/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml
custom_components/cohere_transcribe_diarize/frontend/: panel.js
custom_components/cohere_transcribe_diarize/translations/: pl.json
custom_components/wyoming_transcribe/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml
custom_components/wyoming_transcribe/frontend/: panel.js
custom_components/wyoming_transcribe/translations/: en.json  pl.json
docs/: llm-agent.md
tests/: test_api.sh  test_cli.py  test_diarize_parsing.py  test_enrollment.py  test_history.py  test_pending.py  test_render_speaker_text.py  test_server.py  test_settings.py  test_speaker_id.py  test_transcriber.py  test_whispercpp_backend.py  test_wyoming_handler.py
transcribe_wyoming/: __init__.py  __main__.py  enrollment.py  handler.py  history.py  pending.py  settings.py  speaker_id.py  transcriber.py  vad.py  wyoming_protocol.py
transcribe_wyoming/templates/: index.html
