[project]
name = "wyoming-transcribe"
version = "0.1.0"
description = "Wyoming protocol STT server with speaker identification, backed by whisper.cpp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "huggingface_hub",
    "librosa>=0.10.0",
    "numpy",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "silero-vad>=6.2.0",
    "soundfile",
    "speechbrain>=1.0.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "uvicorn[standard]>=0.29.0",
    "wyoming>=1.8.0",
]

[project.scripts]
transcribe-wyoming = "transcribe_wyoming.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["transcribe_wyoming"]

[tool.setuptools.package-data]
transcribe_wyoming = ["templates/*.html"]
